--- a/notebook/Training_Model.ipynb
+++ b/notebook/Training_Model.ipynb
@@ -17,9 +17,7 @@
     "from sklearn.linear_model import LogisticRegression, RidgeClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier, RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "import warnings"
+    "from xgboost import XGBClassifier"
    ]
   },
   {
